force-app/main/default/objects/Pharmacist__c/Pharmacist__c.object-meta.xml
<CustomObject>
    <label>Pharmacist</label>
    <nameField>
        <displayFormat>P-{000}</displayFormat>
        <label>Pharmacist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>