force-app/main/default/objects/Pharmacist__c/fields/PMail_Id__c.field-meta.xml
<CustomField>
    <fullName>PMail_Id__c</fullName>
    <label>PMail Id</label>
    <type>Email</type>
</CustomField>