force-app/main/default/objects/Pharmacist__c/fields/PName__c.field-meta.xml
<CustomField>
    <fullName>PName__c</fullName>
    <label>PName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>