force-app/main/default/objects/Pharmacist__c/fields/PPhone__c.field-meta.xml
<CustomField>
    <fullName>PPhone__c</fullName>
    <label>PPhone</label>
    <type>Phone</type>
</CustomField>